@@ -80,10 +80,10 @@ $.extend($.fn, {
         if ( $(this[0]).is('form')) {
             return this.validate().form();
         } else {
-            var valid = false;
+            var valid = true;
             var validator = $(this[0].form).validate();
             this.each(function() {
-				valid |= validator.element(this);
+				valid &= validator.element(this);
             });
             return valid;
         }
